<resources>
    <string name="app_name">Ghiblipedia</string>
    
    <string name="home_film_year_and_duration">%1$s • %2$s min</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="about_page">About</string>
    <string name="profile">Profile</string>
    <string name="release">Release</string>
    <string name="runtime">Runtime</string>
    <string name="rating">Rating</string>
    <string name="original_title">Original Title:</string>
    <string name="produced_by">Produced by</string>
    <string name="directed_by">Directed by</string>
    <string name="clear_query">Clear Query</string>
    <string name="search">Search</string>
    <string name="no_data_illustration">No Data Illustration</string>
    <string name="empty_search_result">No data matches the title, \nSearch another title?</string>
    <string name="empty_favorite">No film has been added to favorite</string>
    <string name="film_poster">Film Poster</string>
    <string name="film_banner">Film Banner</string>
</resources>