...
                        .size(
                            width = 192.dp,
                            height = 192.dp,
                        ),
                )
                Text(
                    text = "Abrar Wiryawan",
                    style = MaterialTheme.typography.h4,
                )
                Text(
                    text = "abrarwiryawan@gmail.com",
                    style = MaterialTheme.typography.subtitle2,
                )
            }
        }
    }
}
...
