package com.wiryadev.ghiblipedia.utils

import com.wiryadev.ghiblipedia.model.Film

val dummyFilm = Film(
    id = "58611129-2dbc-4a81-a72f-77ddfc1b1b49",
    title = "My Neighbor Totoro",
    originalTitle = "となりのトトロ",
    originalTitleRomanised = "Tonari no Totoro",
    posterUrl = "https://image.tmdb.org/t/p/w600_and_h900_bestv2/rtGDOeG9LzoerkDGZF9dnVeLppL.jpg",
    bannerUrl = "https://image.tmdb.org/t/p/original/etqr6fOOCXQOgwrQXaKwenTSuzx.jpg",
    description = "Two sisters move to the country with their father in order to be closer to their hospitalized mother, and discover the surrounding trees are inhabited by Totoros, magical spirits of the forest. When the youngest runs away from home, the older sister seeks help from the spirits to find her.",
    director = "Hayao Miyazaki",
    producer = "Hayao Miyazaki",
    releaseYear = "1988",
    duration = "86",
    rating = "93",
)