...
import androidx.compose.runtime.Composable
import androidx.compose.ui.Modifier
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.unit.dp
import com.wiryadev.ghiblipedia.model.Film

const val FilmsListTestTag = "FilmsListTestTag"
@Composable
fun FilmList(
    films: List<Film>,
    navigateToDetail: (String) -> Unit,
    modifier: Modifier = Modifier,
    state: LazyListState = rememberLazyListState(),
...
